--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/App.config
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/App.config
@@ -13,4 +13,9 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="QLMuaHang" connectionString="data source=.;initial catalog=qlmuahang;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="QLMuaHang" connectionString="data source=.;initial catalog=qlmuahang;integrated;user id=duy;password=duy;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="QLMuaHang2" connectionString="Data Source=25.15.241.48\DESKTOP-31CC9RR,1433;Initial Catalog=qlmuahang;" providerName="System.Data.SqlClient" />
+    <add name="QLMuaHang1" connectionString="Data Source=25.27.121.119\DESKTOP-NE6TTO8\SQLEXPRESS,1433;Initial Catalog=qlmuahang;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+</configuration>
