--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/YCBG_HeQtCSDL.csproj
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/YCBG_HeQtCSDL.csproj
@@ -43,6 +43,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -82,6 +83,9 @@
     <Compile Include="EF\SanPham.cs" />
     <Compile Include="EF\YeuCauBaoGia.cs" />
     <Compile Include="EF\YeuCauMuaHang.cs" />
+    <Compile Include="login.xaml.cs">
+      <DependentUpon>login.xaml</DependentUpon>
+    </Compile>
     <Compile Include="main_YCBG.xaml.cs">
       <DependentUpon>main_YCBG.xaml</DependentUpon>
     </Compile>
@@ -91,6 +95,10 @@
     <Compile Include="ViewModel\ChiTietBaoGiaVM.cs" />
     <Compile Include="ViewModel\ThemSanPhamYCBGVM.cs" />
     <Compile Include="ViewModel\YeuCauBaoGiaVM.cs" />
+    <Page Include="login.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -137,7 +145,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DAO\" />
