--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/YCBG_HeQtCSDL/packages
-/YCBG_HeQtCSDL/.vs
-/YCBG_HeQtCSDL/YCBG_HeQtCSDL/bin
+YCBG_HeQtCSDL/packages
+YCBG_HeQtCSDL/.vs
+YCBG_HeQtCSDL/YCBG_HeQtCSDL/bin
