--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-YCBG_HeQtCSDL/packages
-YCBG_HeQtCSDL/.vs
-YCBG_HeQtCSDL/YCBG_HeQtCSDL/bin
+YCBG_HeQtCSDL/packages/*
+
+YCBG_HeQtCSDL/YCBG_HeQtCSDL/bin/*
+YCBG_HeQtCSDL/YCBG_HeQtCSDL/obj/*
 YCBG_HeQtCSDL/YCBG_HeQtCSDL/obj
+
+YCBG_HeQtCSDL/.vs
