try fix .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-YCBG_HeQtCSDL/packages/*
+YCBG_HeQtCSDL/packages
 
-YCBG_HeQtCSDL/YCBG_HeQtCSDL/bin/*
-YCBG_HeQtCSDL/YCBG_HeQtCSDL/obj/*
+YCBG_HeQtCSDL/YCBG_HeQtCSDL/bin
 YCBG_HeQtCSDL/YCBG_HeQtCSDL/obj
-
+YCBG_HeQtCSDL/YCBG_HeQtCSDL/obj/*
 YCBG_HeQtCSDL/.vs
