--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/YCBG_HeQtCSDL.csproj
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/YCBG_HeQtCSDL.csproj
@@ -86,6 +86,8 @@
     <Compile Include="EF\SanPham.cs" />
     <Compile Include="EF\YeuCauBaoGia.cs" />
     <Compile Include="EF\YeuCauMuaHang.cs" />
+    <Compile Include="Func\createObject.cs" />
+    <Compile Include="Func\getData.cs" />
     <Compile Include="list_CTYCBG.xaml.cs">
       <DependentUpon>list_CTYCBG.xaml</DependentUpon>
     </Compile>
@@ -98,6 +100,15 @@
     <Compile Include="Pages\showOption.xaml.cs">
       <DependentUpon>showOption.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\ThemMuaHang\ThemMoi.xaml.cs">
+      <DependentUpon>ThemMoi.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ThemMuaHang\ThemTuKHMua.xaml.cs">
+      <DependentUpon>ThemTuKHMua.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\ThemMuaHang\ThemTuYCBG.xaml.cs">
+      <DependentUpon>ThemTuYCBG.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\YCBaoGia.xaml.cs">
       <DependentUpon>YCBaoGia.xaml</DependentUpon>
     </Compile>
@@ -107,8 +118,12 @@
     <Compile Include="ViewModel\ChiTietBaoGiaVM.cs" />
     <Compile Include="ViewModel\ChiTietYeuCauBaoGiaVM.cs" />
     <Compile Include="ViewModel\ListChiTIetYeuCauBaoGia.cs" />
+    <Compile Include="ViewModel\RowToIndexConverter.cs" />
     <Compile Include="ViewModel\ThemSanPhamYCBGVM.cs" />
     <Compile Include="ViewModel\YeuCauBaoGiaVM.cs" />
+    <Compile Include="Views\ThemMuaHang.xaml.cs">
+      <DependentUpon>ThemMuaHang.xaml</DependentUpon>
+    </Compile>
     <Page Include="CTBaoGia.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -141,11 +156,27 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\ThemMuaHang\ThemMoi.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\ThemMuaHang\ThemTuKHMua.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\ThemMuaHang\ThemTuYCBG.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\YCBaoGia.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ThemSanPhamYCBG.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\ThemMuaHang.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
