--- a/YCBG_HeQtCSDL/YCBG_HeQtCSDL/App.config
+++ b/YCBG_HeQtCSDL/YCBG_HeQtCSDL/App.config
@@ -18,5 +18,5 @@
     <add name="QLMuaHang2" connectionString="Data Source=25.15.241.48\DESKTOP-31CC9RR,1433;Initial Catalog=qlmuahang;" providerName="System.Data.SqlClient" />
     <add name="QLMuaHang1" connectionString="Data Source=25.27.121.119\DESKTOP-NE6TTO8\SQLEXPRESS,1433;Initial Catalog=qlmuahang;" providerName="System.Data.SqlClient" />
     <add name="QLMuaHang3" connectionString="Data Source=.,1433;Initial Catalog=qlmuahang;" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="Model1" connectionString="data source=desktop-31cc9rr;initial catalog=qlmuahang;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
